--- a/src/App.css
+++ b/src/App.css
@@ -9,4 +9,10 @@ body {
     font-family: 'Roboto', sans-serif;
     background-color: #111;
     color: #fff; 
+    margin: 0;
+    padding: 0; 
+}
+
+.lists {
+    margin-top: -150px; 
 }
