--- a/src/Components/FeaturedMovie/featuredMovie.css
+++ b/src/Components/FeaturedMovie/featuredMovie.css
@@ -20,7 +20,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center; 
-    padding-left: 30px;
+    padding: 70px 0 150px 30px; 
 }
 
 .featured--name {
