--- a/src/Components/MovieRow/movieRow.css
+++ b/src/Components/MovieRow/movieRow.css
@@ -12,6 +12,11 @@
     padding-left: 30px;
 }
 
+.movieRow:hover .movieRow--left,
+.movieRow:hover .movieRow--right {
+    opacity: 1;
+}
+
 .movieRow--list {
     width: 999999999999px;
 }
@@ -29,4 +34,34 @@
 
 .movieRow--item img:hover {
     transform: scale(1);
+}
+
+
+.movieRow--left,
+.movieRow--right {
+    position: absolute;
+    width: 40px;
+    height: 230px;
+    background: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 50;
+    transition: all ease .2s;
+    opacity: 0; 
+    transition: opacity ease .2s;
+}
+
+.moviewRow--left {
+    left: 0;
+}
+
+.movieRow--right {
+    right: 0;
+}
+
+.movieRow--left:hover,
+.movieRow--right:hover {
+    cursor: pointer;
+    background: rgba(0,0,0, .6); 
 }
